cmake_minimum_required(VERSION 3.12)
project(PTA)

set(CMAKE_CXX_STANDARD 14)

# add_executable(PTA src/Max_SubSum.c)
# add_executable(Leapyear src/Leapyear.cpp)
# add_executable(sort_01 src/sort_01.cpp)
# add_executable(chargrah src/chargrah.cpp src/001.cpp)
# add_executable(001 src/001.cpp)
# add_executable(002 src/002.c)
# add_executable(003 src/003.c)
add_executable(004 src/004.c)