cmake_minimum_required(VERSION 3.12)
project(PTA)

set(CMAKE_CXX_STANDARD 14)

# add_executable(PTA src/Max_SubSum.c)
# add_executable(Leapyear src/Leapyear.cpp)
# add_executable(sort_01 src/sort_01.cpp)
# add_executable(chargrah src/chargrah.cpp src/001.cpp)
# add_executable(001 src/001.cpp)
# add_executable(002 src/002.c)
# add_executable(003 src/003.c)
# add_executable(004 src/004.c)
# add_executable(005 src/005.cpp)
# add_executable(006 src/006.c)
# add_executable(007 src/007.c)
# add_executable(008 src/008.c)
add_executable(009 src/009.c src/009.c)